; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-xtalk-bridge.c_bridge_remove.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-xtalk-bridge.c_bridge_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.pci_bus = type { i32 }
%struct.bridge_controller = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @bridge_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bridge_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.pci_bus*, align 8
  %4 = alloca %struct.bridge_controller*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.pci_bus* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.pci_bus* %6, %struct.pci_bus** %3, align 8
  %7 = load %struct.pci_bus*, %struct.pci_bus** %3, align 8
  %8 = call %struct.bridge_controller* @BRIDGE_CONTROLLER(%struct.pci_bus* %7)
  store %struct.bridge_controller* %8, %struct.bridge_controller** %4, align 8
  %9 = load %struct.bridge_controller*, %struct.bridge_controller** %4, align 8
  %10 = getelementptr inbounds %struct.bridge_controller, %struct.bridge_controller* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @irq_domain_remove(i32 %11)
  %13 = call i32 (...) @pci_lock_rescan_remove()
  %14 = load %struct.pci_bus*, %struct.pci_bus** %3, align 8
  %15 = call i32 @pci_stop_root_bus(%struct.pci_bus* %14)
  %16 = load %struct.pci_bus*, %struct.pci_bus** %3, align 8
  %17 = call i32 @pci_remove_root_bus(%struct.pci_bus* %16)
  %18 = call i32 (...) @pci_unlock_rescan_remove()
  ret i32 0
}

declare dso_local %struct.pci_bus* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local %struct.bridge_controller* @BRIDGE_CONTROLLER(%struct.pci_bus*) #1

declare dso_local i32 @irq_domain_remove(i32) #1

declare dso_local i32 @pci_lock_rescan_remove(...) #1

declare dso_local i32 @pci_stop_root_bus(%struct.pci_bus*) #1

declare dso_local i32 @pci_remove_root_bus(%struct.pci_bus*) #1

declare dso_local i32 @pci_unlock_rescan_remove(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
